# rust-cockroach-example

./: .env  Cargo.toml  Dockerfile  README.md
deployments/: docker-compose.dev.yaml
infra/: docker-compose.yaml
migrations/2024-01-12-191607_create_users/: up.sql
src/: config.rs  database.rs  errors.rs  main.rs  schema.rs
src/database/: mod.rs
src/handlers/user/: create.rs  get.rs  list.rs
src/helpers/: mod.rs  respond.rs  validate.rs
src/models/: like.rs  mod.rs  tweet.rs  user.rs
