[package]
name = "rust-cockroach-example"
version = "0.1.0"
authors = ["Alexandr Rutkowski <kitanoyoru@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.11"
actix-web = "4"
tokio = { version = "1.12", features = ["full"] }
futures = "0.3.6"
uuid = { version = "1.0", features = ["serde", "v4"] }
bigdecimal = "0.2.0"
num-bigint = "0.3"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
serde = { version = "1.0.195", features = ["derive"] }
actix = "0.13.1"
actix-cors = "0.7.0"
actix-identity = "0.7.0"
actix-redis = "0.13.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
redis-async = "0.16.1"
serde_derive = "1.0.195"
serde_json = "1.0.111"
validator = "0.16.1"
validator_derive = "0.16.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
envy = "0.4.2"
derive_more = "0.99.17"
lazy_static = "1.4.0"
rayon = "1.8.0"
argon2rs = "0.2.5"

[features]
cockroach = []
postgres = []
default = ["cockroach"]
